# sonopsis

./: .env.example  .gitignore  AGENTS.md  DIARIZATION_PLAN.md  PROJECT_SUMMARY.md  README.md  START_HERE.md  config.yaml  interactive.py  main.py  pyproject.toml  requirements.txt  sonopsis-cli.py  sonopsis.py  test_chunking.py  test_comparison.py  test_gemini.py  test_gemini_summary.py  test_plain_transcript.py  test_transcript.py  ytp.bat  ytp.py  ytp.sh
.claude/: session-handoff.md  settings.json  settings.local.json
.claude/agents/: process-guardian.md
.tmp/: narrative_summary.md
docs/: PLAN.md  QUICKSTART.md  STORAGE.md  analysis_advanced.md  analysis_basic.md  speaker_identification_protocol.md
images/: logo-sonopsis.txt
prose/prompts/: analysis_basic.md  system.md
scripts/: compare_models.py  process_existing.py  test_gpt5.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_imports.py  test_prose.py  test_utils.py
utils/: __init__.py  downloader.py  summarizer.py  transcriber.py
