[project]
name = "sonopsis"
version = "0.1.0"
description = "Video/audio summariser - download, transcribe with Whisper/ElevenLabs, and generate AI summaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "rich>=13.0.0",
]

[tool.forma]
description = "Video/audio summariser - download, transcribe with Whisper/ElevenLabs, and generate AI summaries"
resources = ["video", "audio", "transcript", "summary"]
auth = "api_key"
origin = "forma"
status = "experimental"
install = "uv pip install -e ."
env-key = "OPENAI_API_KEY"
api-url = "https://platform.openai.com/docs"
setup-notes = "Requires OpenAI API key for Whisper transcription and GPT/Claude for summaries"
