[project]
name = "sonopsis"
version = "0.1.0"
description = "Video/audio summariser - download, transcribe with Whisper/ElevenLabs, and generate AI summaries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["utils*"]

[project.scripts]
sonopsis = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.forma]
description = "Video/audio summariser - download, transcribe with Whisper/ElevenLabs, and generate AI summaries"
resources = ["video", "audio", "transcript", "summary"]
auth = "api_key"
origin = "forma"
install = "uv tool install --editable ."
env-key = "OPENAI_API_KEY"
api-url = "https://platform.openai.com/docs"
setup-notes = "Requires OpenAI API key for Whisper transcription and GPT/Claude for summaries"
maturity = "scaffold"
